--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ body {
 #left-up-header {
   background-color: #242424;
   border-radius: 50%;
-  width: 250px;
-  height: 250px;
+  width: 230px;
+  height: 230px;
   transition: width 1s cubic-bezier(0.19, 1, 0.22, 1), height 1s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
@@ -63,6 +63,7 @@ body {
 
 #main-wrapper {
   overflow-x: hidden;
+  overflow-y: visible;
   width: 100vw;
   display: flex;
   align-items: center;
@@ -222,11 +223,11 @@ body {
               <div style="margin-left: 0px; height: 80%; width: calc(100% * 1.068); rotate: -5deg; flex-shrink: 0; display: flex; justify-content: center;">
                 <div id="news-mover">
                   <div class="news-prompt" style="margin: 0;">
-                    <div style=" margin: 0; transform: rotate(5deg); height: 100vw; width: 100vw; background-image: url('./public/Images/satellitePreviewImg.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+                    <div style=" margin: 0; transform: rotate(5deg); height: 100vh; width: 100vw; background-image: url('./public/Images/satellitePreviewImg.jpg'); background-size: cov; background-repeat: no-repeat; background-position: center;">
                     </div>
                   </div>
                   <div class="news-prompt" style="margin: 0;">
-                    <div style="margin: 0; transform: rotate(5deg); height: 100vw; width: 100vw; background-image: url('./public/Images/previewImage.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+                    <div style="margin: 0; transform: rotate(5deg); height: 100vh; width: 100vw; background-image: url('./public/Images/previewImage.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
                     </div>
                   </div>
                 </div>
@@ -286,6 +287,8 @@ body {
         });
         const currentScrollPosition = window.pageYOffset + 200;
         bg.style.transform = "translateY(-"+currentScrollPosition*0.4+"px)"
+
+        document.querySelector("#main-wrapper").height = document.querySelector("#main").scrollHeight + 100 + "px"
       
         const newsRight = document.querySelector('#news-button-right')
         const newsLeft = document.querySelector('#news-button-left')
