fixed mobile phone problems

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ body {
               <div style="margin-left: 0px; height: 80%; width: calc(100% * 1.068); rotate: -5deg; flex-shrink: 0; display: flex; justify-content: center;">
                 <div id="news-mover">
                   <div class="news-prompt" style="margin: 0;">
-                    <div style=" margin: 0; transform: rotate(5deg); height: 100vh; width: 100vw; background-image: url('./public/Images/satellitePreviewImg.jpg'); background-size: cov; background-repeat: no-repeat; background-position: center;">
+                    <div style=" margin: 0; transform: rotate(5deg); height: 100vh; width: 100vw; min-width: 50vh; background-image: url('./public/Images/satellitePreviewImg.jpg'); background-size: cov; background-repeat: no-repeat; background-position: center;">
                     </div>
                   </div>
                   <div class="news-prompt" style="margin: 0;">
